cleanups, fem refactored