@@ -1,21 +1,19 @@
 package bee.creative.fem;
 
-import bee.creative.fem.FEM.ScriptFormatter;
-
 /** Diese Klasse implementiert eine projizierende Funktion, deren Ergebniswert einem der Parameterwerte des Stapelrahmens entspricht.
  * 
  * @see #index()
  * @see #invoke(FEMFrame)
  * @author [cc-by] 2011 Sebastian Rostock [http://creativecommons.org/licenses/by/3.0/de/] */
-public final class FEMParamFunction extends FEMBaseFunction {
+public final class FEMParam extends FEMFunction {
 
 	/** Dieses Feld speichert die projezierenden Funktionen für die Indizes {@code 0..9}. */
-	static final FEMParamFunction[] _cache_ = {new FEMParamFunction(0), new FEMParamFunction(1), new FEMParamFunction(2), new FEMParamFunction(3),
-		new FEMParamFunction(4), new FEMParamFunction(5), new FEMParamFunction(6), new FEMParamFunction(7), new FEMParamFunction(8), new FEMParamFunction(9)};
+	static final FEMParam[] _cache_ = {new FEMParam(0), new FEMParam(1), new FEMParam(2), new FEMParam(3), new FEMParam(4), new FEMParam(5), new FEMParam(6),
+		new FEMParam(7), new FEMParam(8), new FEMParam(9)};
 
 	/** Dieses Feld speichert eine Funktion mit der Signatur {@code (index: Integer): Value}, deren Ergebniswert dem {@code index}-ten Parameterwert des
 	 * Stapelrahmens entspricht. */
-	public static final FEMBaseFunction ITEM = new FEMBaseFunction() {
+	public static final FEMFunction ITEM = new FEMFunction() {
 
 		@Override
 		public FEMValue invoke(final FEMFrame frame) {
@@ -27,8 +25,8 @@ public final class FEMParamFunction extends FEMBaseFunction {
 		}
 
 		@Override
-		public void toScript(final ScriptFormatter target) throws IllegalArgumentException {
-			target.put("ITEM");
+		public void toScript(final FEMFormatter target) throws IllegalArgumentException {
+			target.put("$#");
 		}
 
 	};
@@ -38,7 +36,7 @@ public final class FEMParamFunction extends FEMBaseFunction {
 	 * 
 	 * @see FEMArray#from(FEMValue...)
 	 * @see FEMFrame#params() */
-	public static final FEMBaseFunction COPY = new FEMBaseFunction() {
+	public static final FEMFunction COPY = new FEMFunction() {
 
 		@Override
 		public FEMValue invoke(final FEMFrame frame) {
@@ -46,7 +44,7 @@ public final class FEMParamFunction extends FEMBaseFunction {
 		}
 
 		@Override
-		public void toScript(final ScriptFormatter target) throws IllegalArgumentException {
+		public void toScript(final FEMFormatter target) throws IllegalArgumentException {
 			target.put("$");
 		}
 
@@ -56,7 +54,7 @@ public final class FEMParamFunction extends FEMBaseFunction {
 	 * {@code frame.params()}.
 	 * 
 	 * @see FEMFrame#params() */
-	public static final FEMBaseFunction VIEW = new FEMBaseFunction() {
+	public static final FEMFunction VIEW = new FEMFunction() {
 
 		@Override
 		public FEMValue invoke(final FEMFrame frame) {
@@ -64,7 +62,7 @@ public final class FEMParamFunction extends FEMBaseFunction {
 		}
 
 		@Override
-		public void toScript(final ScriptFormatter target) throws IllegalArgumentException {
+		public void toScript(final FEMFormatter target) throws IllegalArgumentException {
 			target.put("$");
 		}
 
@@ -75,12 +73,12 @@ public final class FEMParamFunction extends FEMBaseFunction {
 	/** Diese Methode gibt eine Funktion zurück, welche den {@code index}-ten Parameterwert des Stapelrahmens als Ergebniswert liefert.
 	 * 
 	 * @param index Index des Parameterwerts.
-	 * @return {@link FEMParamFunction}.
+	 * @return {@link FEMParam}.
 	 * @throws IndexOutOfBoundsException Wenn {@code index < 0} ist. */
-	public static FEMParamFunction from(final int index) throws IndexOutOfBoundsException {
+	public static FEMParam from(final int index) throws IndexOutOfBoundsException {
 		if (index < 0) throw new IndexOutOfBoundsException("index < 0");
-		if (index < FEMParamFunction._cache_.length) return FEMParamFunction._cache_[index];
-		return new FEMParamFunction(index);
+		if (index < FEMParam._cache_.length) return FEMParam._cache_[index];
+		return new FEMParam(index);
 	}
 
 	{}
@@ -88,12 +86,8 @@ public final class FEMParamFunction extends FEMBaseFunction {
 	/** Dieses Feld speichert den Index des Parameterwerts. */
 	final int _index_;
 
-	/** Dieser Konstruktor initialisiert den Index des Parameterwerts.
-	 * 
-	 * @param index Index des Parameterwerts.
-	 * @throws IndexOutOfBoundsException Wenn {@code index < 0} ist. */
-	public FEMParamFunction(final int index) throws IndexOutOfBoundsException {
-		if (index < 0) throw new IndexOutOfBoundsException("index < 0");
+	@SuppressWarnings ("javadoc")
+	FEMParam(final int index) {
 		this._index_ = index;
 	}
 
@@ -121,8 +115,8 @@ public final class FEMParamFunction extends FEMBaseFunction {
 
 	/** {@inheritDoc} */
 	@Override
-	public final void toScript(final ScriptFormatter target) throws IllegalArgumentException {
-		target.put("$").put(new Integer(this._index_ + 1));
+	public final void toScript(final FEMFormatter target) throws IllegalArgumentException {
+		target.put("$").put(Integer.valueOf(this._index_ + 1));
 	}
 
 }
